# zephyr-rgblights-controller

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  zephyr-rgblights-controller.code-workspace
boards/: nicekeyboards_nicenano_nrf52840.overlay
boards/nicekeyboards/nicenano/: Kconfig  Kconfig.defconfig  Kconfig.nicekeyboards_nicenano  board.yml  nicekeyboards_nicenano_nrf52840-pinctrl.dtsi  nicekeyboards_nicenano_nrf52840.dts  nicekeyboards_nicenano_nrf52840.yaml
docker/: Dockerfile  README.md  docker-build.sh  docker-run.sh  entrypoint.sh  env.sh  setupzephyr.sh
manifest/: west.yml
scripts/: bin2elf.sh  esp32c3bin2elf.sh  gdbstartup
scripts/west_manifest/: main_menu.py  project_menu.py  requirements.txt  setup_venv.py
src/: ble.c  button.c  button.h  main.c  usb_uart.c
sysbuild/: mcuboot.conf
